argocd/kantra-app/kantra-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kantra
  namespace: internship

spec:
  replicas: 1
  selector:
    matchLabels: 
      app: kantra-pod
  template:
    metadata:
      labels:
        app: kantra-pod
    spec:
      containers:
      - name: 9antra
        image: asslam1991/9antra:latest
        ports:
        - containerPort: 80
        resources :
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits: 
            memory: "512Mi"
            cpu: "500m"
  selector:
    matchLabels: 
      app : kantra-pod
