argocd/kantra-app/kantra-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kantra-svc
  namespace: internship
spec:
  selector:
    app: kantra-pod
  ports:
  - protocol: TCP
    port: 4200
    targetPort: 80
    
  type: ClusterIP
